templates and products worflows with frontend annotations